# Bindu

./: .coveragerc  .env  .env.example  .env.hydra.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  HYDRA_IMPLEMENTATION.md  LICENSE  MAINTAINERS.md  MANUAL_TESTING_GUIDE.md  Makefile  NEXT_STEPS.md  OAUTH_CREDENTIALS_SETUP.md  PR_DESCRIPTION.md  README copy.md  README.md  REFACTORING_SUMMARY.md  REPLY_FEATURE_INSTRUCTIONS.md  RETRY_IMPLEMENTATION.md  RandomAdviceAgent  alembic.ini  bandit.yaml  banker_agent.py  config_demo.py  docker-compose.hydra.yml  dokcer-compose.yaml  fly.toml  generated_model_from_yaml.py  maintainers.md  openapi.yaml  pebble.postman_collection.json  pebble_project_private_key.json  pebbling.postman_collection.json  protocol_config.json  pyproject.toml  pytest.ini  random-advice-agent.py  requirements-db.txt  (+7 more)
.github/: contributing.md  dependabot.yml  pull_request_template.md
.github/.workflows/: release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql-analysis.yml  dependency-review.yml  python-app.yml  python-publish.yml  release.yml  uv-build-publish.yml  uv-cache.yml
Orchestrator_Agent/: .dockerignore  .env.production  Dockerfile  README.MD  docker-compose.yml  requirements.txt
Orchestrator_Agent/models/: agent_profile.py  execution_plan.py  negotiation.py  results.py  task.py
Orchestrator_Agent/orchestrator/: __init__.py  agent_executor.py  agent_negotiator.py  agent_registry.py  handler.py  main.py  payment_handler.py  result_aggregator.py  task_decomposer.py
Orchestrator_Agent/tests/: conftest.py
Orchestrator_Agent/utils/: __init__.py  a2a_client.py  cache.py  capability_matcher  cost_optimizer.py  did_resolver.py  logger.py
alembic/: README.md  __init__.py  env.py
alembic/versions/: 20250614_0001_add_webhook_configs_table.py  20251207_0001_initial_schema.py  20251207_0905_ef0d61440935_add_foreign_key_constraint_from_tasks_.py  add_hydra_user_mapping.py
bindu/: __init__.py  settings.py  version.py
bindu/auth/: __init__.py  hydra_client.py  kratos_client.py
bindu/common/: __init__.py  models.py  types.py
bindu/dspy/: config.py  dataset.py  extractor.py  models.py  postgres.py  program.py  strategies.py  train.py
bindu/extensions/: __init__.py
bindu/mcp/: __init__.py  credential_injector.py  server_config.py
bindu/observability/: __init__.py  openinference.py
bindu/penguin/: __init__.py  bindufy.py  config_validator.py  credential_manager.py  manifest.py  pebblify.py
bindu/server/: __init__.py  applications.py  task_manager.py
bindu/ui/: __init__.py  html_ui.py
bindu/utils/: __init__.py  agent_card_utils.py  agent_data_utils.py  auth_utils.py  capabilities.py  cert_helper.py  circuit_breaker.py  coinbase_utils.py  constants.py  did_utils.py  display.py  endpoint_utils.py  logging.py  notifications.py  request_utils.py  retry.py  security.py  skill_loader.py  skill_utils.py  task_telemetry.py  worker_utils.py
config/hydra/: clients.yml
config/kratos/: identity.schema.json  kratos.yml  oidc.google.jsonnet  (+1 more)
docs/: AUTH_README.md  QUICKSTART-X402.md  SECURITY_SCANNING.md  api-compliance-check.md  architecture.md  auth0-m2m-setup.md  auth0-setup.md  deployment-testing-guide.md  hybrid-agent-pattern.md  jaeger-setup.md  local-setup.md  mental-model.md  migration-guide.md  negotiate.md  oauth-integration.md  oneuptime-setup.md  opentelemetry-tracing.md  orchestration-architecture.md  quick-tracing-setup.md  refactoring-handlers.md  refactoring-task-manager.md  reply-feature.md  skills-system.md  streamlit-ui-guide.md  task-cancellation.md  task-id-management.md  testing-guide.md  tracing-configuration.md  x402-discovery-metadata.md  x402-implementation-phases.md  x402-middleware-implementation.md  x402-payment-flow-fix.md  x402-payment-verification-fix.md  x402-phase2-implementation.md  x402-phase2-summary.md  x402-plan.md  x402-pricing-guide.md  x402-security.md  x402-testing-guide.md  x402-wallet-setup.md
examples/: .env.example  README.md  README_PAYMENT.md  agent_communication.py  agent_config.json  agent_handlers_test.py  agent_type_usage.py  agent_with_auth_config.json  agno_example.py  agno_example_streamlit.py  agno_extra copy.py  agno_simple_example.py  at_proto_sample.py  basic_protocol_usage.py  calculator_agent.py  circuit_breaker_demo.py  client_example.py  cognitive_agno_agents.py  coinbase_check.py  coordinator_example.py  create_x402_payment.py  crew_example.py  custom_agent_adapter.py  deploy_agno_agent.py  deploy_cognitive_agents.py  deploy_local_server.py  deploy_protocol_test.py  deploy_with_docker.py  deploy_with_router.py  echo_agent.py  echo_agent_with_webhooks.py  echo_simple_agent.py  example.py  first_response.json  foo_payment.json  generate_payment_for_foo.py  generate_second_request.py  generate_test_wallet.py  get_auth0_token.py  m2m_client_example.py  (+28 more)
keys/: agent_csr.pem  client_cert.pem  client_key.pem  news_reporter_key.json  sheldon_public_cert.pem  student_key.json  teacher_key.json
pebble/: __init__.py
pebble-cookiecutter/: cookiecutter.json
pebble-example/: cookiecutter.json  pyproject.toml
pebble-example/hooks/: post_gen_project.py
pebble-example/pebble-project/: fly.toml  pyproject.toml
pebble-example/pebble-project/pebble_project/: app.py
pebble-example/{{cookiecutter.project_name}}/{{cookiecutter.project_slug}}/: Dockerfile
pebble-project/: pebble_project_private_key.json  pyproject.toml
pebble_project_certificates/: ca.crt  ca.key  client.crt  client.key  server.crt  server.key
pebbling/: __init__.py  pytest.ini  settings.py  version.py
scripts/: deploy-ory-stack.ps1  deploy-ory-stack.sh
sheldon/: Dockerfile  docker-compose.yml
tests/: README.md  __init__.py  conftest.py  mocks.py  test_agno_adapter.py  test_error_handling.py  test_examples.py  test_integration.py  test_jsonrpc_server.py  test_model_schemas.py  test_model_validation.py  test_pebbling_server.py  test_protocol.py  test_rest_server.py  test_schema_models.py  utils.py
utils/: README.md  manage_secrets.py
(+619 files in other folders)
