[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pebble"
version = "0.1.0"
description = "Communication protocol for different agent types (smolagent, agno, crew)"
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}
authors = [
    {name = "Rahul Dutta", email = "rahuldutta@example.com"}
]
keywords = ["agents", "llm", "communication", "protocol"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "agno>=1.1.9",
    "crewai>=0.105.0",
    "crewai-tools>=0.37.0",
    "duckduckgo-search>=7.5.1",
    "fastapi>=0.115.11",
    "llama-index>=0.12.23",
    "loguru>=0.7.3",
    "numpy>=2.2.3",
    "openai>=1.65.4",
    "requests>=2.32.3",
    "smolagents>=1.10.0",
    "tantivy>=0.22.0",
    "uvicorn>=0.34.0",
    "pydantic>=2.0.0",
    "google-genai>=1.2.0",
    "grip>=4.6.2",
]

project.optional-dependencies=
agno = ["agno>=0.1.0"]
crew = ["crewai>=0.1.0"]
langchain = ["langchain>=0.1.0"]
llamaindex = ["llama-index>=0.1.0"]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.12.1",
    "black>=21.5b2",
    "isort>=5.9.1",
    "mypy>=0.812",
    "ruff>=0.0.1",
]
all = [
    "agno>=0.1.0",
    "crewai>=0.1.0",
    "langchain>=0.1.0",
    "llama-index>=0.1.0",
]


project.urls
]
"Homepage" = "https://github.com/pebbling/pebble"
"Bug Tracker" = "https://github.com/pebbling/pebble/issues"

[
tool.setuptools
]
package-dir = {"" = "src"}

[
tool.isort
]
profile = "black"
known_first_party = ["pebble"]

[
tool.black
]
line-length = 88
target-version = ["py38", "py39", "py310"]

[
tool.mypy
]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[
tool.ruff
]
target-version = "py38"
line-length = 88
select = ["E", "F", "B", "I"]
ignore = []

[project.urls]
"Homepage" = "https://github.com/Pebbling-ai/pebble"
"Bug Tracker" = "https://github.com/Pebbling-ai/pebble/issues"
