[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pebble"
version = "0.1.0"
description = "A protocol framework for agent-to-agent communication"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Rahul Dutta", email = "raahul@pebbling.ai"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "pydantic>=1.8.2",
    "loguru>=0.7.3",
]

[project.optional-dependencies]
agno = ["agno>=0.1.0"]

[tool.hatch.build.targets.wheel]
packages = ["pebble"]

[tool.hatch.build.targets.sdist]
include = [
    "pebble",
    "protocol_config.json",
    "README.md",
]

[tool.uv.sources]
pebble = { workspace = true }

[dependency-groups]
dev = [
    "pebble",
]
