[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pebbling"
version = "0.1.0.3"
description = "A protocol framework for agent-to-agent communication"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Rahul Dutta", email = "raahul@pebbling.ai" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "pydantic>=1.8.2",
    "loguru>=0.7.3",
    "agno>=1.5.2",
    "openai>=1.75.0",
    "pytest-asyncio>=0.26.0",
    "duckduckgo-search>=8.0.1",
    "yfinance>=0.2.55",
    "litellm>=1.67.2",
    "atproto>=0.0.61",
    "base58>=2.1.1",
    "supabase>=2.15.1",
    "uvx<2.0",
    "pipreqs>=0.5.0",
    "twine>=6.1.0",
    "rich>=13.0.0",
    # Removed pebbling dependency as this package is now pebbling
    "pytest-xdist>=3.6.1",
    "pytest-cov>=6.1.1",
    "sphinx>=8.2.3",
    "sphinx-rtd-theme>=3.0.2",
    "ruff>=0.11.9",
    "mypy>=1.15.0",
    "isort>=6.0.1",
    "pre-commit>=4.2.0",
    "bandit>=1.8.3",
    "detect-secrets>=1.5.0",
    "google-genai>=1.15.0",
    "types-requests>=2.32.0.20250328",
    "didkit>=0.3.3",
    "cryptography>=44.0.2",
    "pydocstyle>=6.3.0",
    "orjson>=3.10.18",
    "opentelemetry-instrumentation-httpx>=0.56b0",
    "opentelemetry-api>=1.35.0",
    "opentelemetry-exporter-otlp-proto-http>=1.35.0",
    "opentelemetry-instrumentation-fastapi>=0.56b0",
    "opentelemetry-sdk>=1.35.0",
    "psycopg2-binary>=2.9.10",
    "ty>=0.0.1a14",
    "pyyaml>=6.0.2",
    "datamodel-code-generator>=0.31.2",
    "aiofiles>=24.1.0",
    "typer",
    "redis>=6.4.0",
    "sqlalchemy>=2.0.43",
    "qdrant-client>=1.15.1",
    "crewai>=0.177.0",
    "crewai-tools>=0.69.0",
    "openai-agents>=0.2.11",
    "google-adk>=1.3.0",
    "opentelemetry-exporter-otlp>=1.35.0",
    "openinference-instrumentation-agno>=0.1.14",
]

[project.optional-dependencies]
dev = ["pytest-asyncio>=0.26.0"]

[tool.hatch.build.targets.wheel]
packages = ["pebbling"]  # Changed from src/pebbling to reflect actual directory structure

[tool.hatch.build.targets.sdist]
include = [
    "pebbling",  # Changed from /src to pebbling
    "protocol_config.json",
    "README.md"
]

[tool.uv.workspace]
members = ["pebbling-template/my_project", "pebbling-template/project1"]

[tool.uv.sources]
pebbling = { workspace = true }

[dependency-groups]
dev = [
    "pebbling",
    "ty>=0.0.1a14",
]
