[project]
name = "pebbling project skeleton"
version = "0.0.1"
description = "A python cookiecutter application to create a new python project that uses uv to manage its dependencies."
authors = [{ name = "Raahul Dutta", email = "raahul@pebbling.ai" }]
readme = "README.md"
keywords = ['pebbling', 'template', 'uv']
requires-python = ">=3.12"
dependencies = [
  "cookiecutter>=2.1.1"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Code Generators",
]


[project.urls]
Repository = "https://github.com/Pebbling-ai/pebble"
Documentation = "https://docs.pebbling.ai"
Homepage = "https://pebbling.ai"

[dependency-groups]
dev = [
    "pebbling>=0.1.0",
    "loguru>=0.7.3",
    "agno>=1.3.2",
    "openai>=1.75.0",
    "pytest-asyncio>=0.26.0",
    "rich>=13.0.0",
    "cryptography>=44.0.2",
    "pytest>=7.2.0",
    "pre-commit>=2.20.0",
    "pytest-cookies>=0.6.1",
    "tox-uv>=1.11.3",
    "mypy>=0.991",
    "pytest-cov>=4.0.0",
    "ruff>=0.11.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.setuptools]
packages = ["cookiecutter_uv"]

[tool.setuptools.package-data]
"cookiecutter_uv" = ["*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

