[project]
name = "pebble-project"
version = "0.0.1"
description = "This is a template repository for Pebble projects that use uv for their dependency management with pebbling pre-installed."
authors = [{ name = "Penguin Pebble", email = "dev@pebbling.ai" }]
readme = "README.md"
keywords = ["python"]
requires-python = ">=3.12"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://raahulmona.github.io/pebble-project/"
Repository = "https://github.com/raahulmona/pebble-project"
Documentation = "https://raahulmona.github.io/pebble-project/"

[dependency-groups]
dev = [
    "pytest>=7.2.0",
    "pre-commit>=2.20.0",
    "tox-uv>=1.11.3",
    "mypy>=0.991",
    "ruff>=0.11.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# The setuptools section and mypy files will be adjusted by the post_gen_project.py hook
[tool.mypy]
files = [
    "pebble_project"
]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

[tool.pytest.ini_options]
testpaths = ["tests"]

